# url-fairy-bot

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build-and-push.yml  dependabot.yml  lint-docker-hadolint.yml  lint-markdown.yml  lint-python-black.yml  lint-python-ruff.yml
app/: api.py  bot.py  config.py  download.py  main.py  models.py  url_processing.py
app/api/: router.py
app/api/handlers/: process_url.py
app/models/: url_message.py
app/telegram/: bot.py
app/telegram/handlers/: message.py  start.py
app/utils/: download.py  url_processing.py
bot/: Dockerfile  main.py  pyproject.toml  requirements.txt
bot/url-fairy-bot/: main.py
cron/: Dockerfile
nginx/conf.d/: default.conf
nginx/theme/: 404.html  footer.html  header.html
server/: default.conf
tests/: api_test.py  bot_test.py  test_messages.yml
