# pyproject.toml

[tool.poetry]
name = "url-fairy-bot"
version = "1.12"
description = ""
authors = ["Vladimir nett00n Budylnikov <git@nett00n.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2024.7.7"
aiogram = "2.23.1"
requests = "^2.32.2"
python-dotenv = "^1.0.1"
aiogram-utils = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
